--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div id="content">
     <!-- Row 1 -->
     <div class="item">
-      <a href="#">
+      <a href="https://vimeo.com/211151781">
         <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
         <span>Animation Demo Reel</span>
       </a>
@@ -70,7 +70,7 @@
     </div>
     <!-- Row 2 -->
     <div class="item">
-      <a href="god-of-war.html">
+      <a href="anime-omake.html">
         <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" alt="IGN God of War campaign"></div>
         <span>Anime Omake - IGN Series</span>
       </a>
