--- a/youtube.html
+++ b/youtube.html
@@ -55,13 +55,35 @@
         <h2>Vector Art</h2>
         <p>Select intro commissions done for YouTubers. Static character art was provided by clients with permission to animate.</p>
       </div>
-      <div class="art-display">
+        <!--Row 1-->
+        <div class="art-display">
         <div class="half-image loading-icon">
           <img src="img/yt-peachypom.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="img/yt-pastelsims.gif">
+            <img src="img/yt-pastelsims.gif">
+          </div>
+        <!--Row 2-->
+        <div class="half-image loading-icon">
+          <img src="img/yt-cyolism.gif">
         </div>
+        <div class="half-image loading-icon">
+            <img src="img/yt-bearpaw.gif">
+          </div>
+        <!--Row 3-->
+        <div class="half-image loading-icon">
+            <img src="img/yt-melizbeauty.gif">
+          </div>
+          <div class="half-image loading-icon">
+            <img src="img/yt-taestysuga.gif">
+          </div>
+        <!--Row 4-->
+        <div class="half-image loading-icon">
+            <img src="img/yt-wolfkausuan.gif">
+          </div>
+          <div class="half-image loading-icon">
+            <img src="img/yt-lasaens.gif">
+          </div>
       </div>
       <hr>
     </div>
