--- a/anime-omake.html
+++ b/anime-omake.html
@@ -62,7 +62,7 @@
       </div>
       <hr>
     </div>
-    <!-- Logo -->
+        <!-- Logo -->
     <div class="art-section">
       <div class="art-display">
         <div class="full-image">
@@ -76,9 +76,12 @@
           <p>Finalized logo. </p>
           <img src="img/ao-logo3.png">
         </div>
+        <!-- Set -->
         <div class="full-image loading-icon">
-          <p>Presented by transition following the logo animation.</p>
-          <img src="https://media.giphy.com/media/1TSHD8DNYTh8RcsRa5/giphy.gif">
+          <p>Animated intro with anime cuts and sponsor scene.</p>
+            <video width="100%" autoplay muted loop>
+            <source src="img/ao-intro.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="full-image loading-icon">
             <p>Sidebar and challenge progress graphics that highlight as the player completes a milestone. </p>
