--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="item">
       <a href="youtube.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif" alt="youtube commissions"></div>
-        <span>YouTube Gaming Intro Commissions</span>
+        <span>YouTube Gaming Commissions</span>
       </a>
     </div>
     <!-- Row 2 -->
