--- a/youtube.html
+++ b/youtube.html
@@ -52,38 +52,61 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>Vector Art</h2>
+        <h2>YouTube Gaming Commissions</h2>
         <p>Select intro commissions done for YouTubers. Static character art was provided by clients with permission to animate.</p>
       </div>
         <!--Row 1-->
         <div class="art-display">
         <div class="half-image loading-icon">
-          <img src="img/yt-peachypom.gif">
+          <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-            <img src="img/yt-pastelsims.gif">
+            <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
           </div>
         <!--Row 2-->
         <div class="half-image loading-icon">
-          <img src="img/yt-cyolism.gif">
+          <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-            <img src="img/yt-bearpaw.gif">
+            <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
           </div>
         <!--Row 3-->
         <div class="half-image loading-icon">
-            <img src="img/yt-melizbeauty.gif">
+            <img src="https://media.giphy.com/media/8cddMic7kpmOFU7qZY/giphy.gif">
           </div>
           <div class="half-image loading-icon">
-            <img src="img/yt-taestysuga.gif">
+            <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
           </div>
         <!--Row 4-->
         <div class="half-image loading-icon">
-            <img src="img/yt-wolfkausuan.gif">
+            <img src="https://media.giphy.com/media/3CUKhMAnnFs0bkg7rD/giphy.gif">
           </div>
           <div class="half-image loading-icon">
-            <img src="img/yt-lasaens.gif">
+            <img src="https://media.giphy.com/media/cArlRP5R1BDtH3ukt6/giphy.gif">
           </div>
+
+          <p>Select outro commissions done for YouTubers.</p>
+        <!--Row 1-->
+        <div class="art-display">
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+            <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/meilzbeauty-outro_orig.gif">
+          </div>
+        <!--Row 2-->
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lasean-outro_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+            <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/animated-gif-downsized-large-2_orig.gif">
+          </div>
+        <!--Row 3-->
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/cyolism-outro_orig.gif">
+        </div>
+
+
       </div>
       <hr>
     </div>
