--- a/anime-omake.html
+++ b/anime-omake.html
@@ -80,7 +80,7 @@
         <div class="full-image loading-icon">
           <p>Animated intro with anime cuts and sponsor scene.</p>
             <video width="100%" autoplay muted loop>
-            <source src="img/ao-intro.mp4" type="video/mp4">
+            <source src="https://puu.sh/BtxT8.mp4" type="video/mp4">
             </video>
         </div>
         <div class="full-image loading-icon">
