--- a/index.html
+++ b/index.html
@@ -64,34 +64,34 @@
     </div>
     <div class="item">
       <a href="youtube.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif" alt="youtube commissions"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/uWzSBA7D39pNAl9LEU/giphy.gif" alt="youtube commissions"></div>
         <span>YouTube Gaming Commissions</span>
       </a>
     </div>
     <!-- Row 2 -->
     <div class="item">
       <a href="anime-omake.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" alt="IGN God of War campaign"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
         <span>Anime Omake - IGN Series</span>
       </a>
     </div>
     <div class="item">
       <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/26uf5bAChZqPkTzKE/giphy.gif" alt="motion manga and art"></div>
-        <span>Mock Character Selection Menu</span>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
+        <span>Strive for Five Challenge</span>
       </a>
     </div>
     <div class="item">
-      <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3o6Yg8VUijOmdX9It2/source.gif" alt="strive for five challenge"></div>
-        <span>Strive for Five Challenge</span>
+      <a href="behind-the-cosplay.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
+        <span>Behind the Cosplay - IGN Video Series</span>
       </a>
     </div>
      <!-- Row 3 -->
      <div class="item">
-      <a href="behind-the-cosplay.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="behind the cosplay"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
+      <a href="manga.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif" alt="motion manga"></div>
+        <span>Motion Manga (for fun!)</span>
       </a>
     </div>
     <div class="item">
