--- a/strive-for-five.html
+++ b/strive-for-five.html
@@ -73,12 +73,10 @@
           <img src="https://78.media.tumblr.com/8a7710b26f1cecfb75f78b18762255f5/tumblr_peah1mrEIV1tmp8rdo2_r1_1280.png">
         </div>
         <div class="full-image loading-icon">
-          <p>Final logo animation for the intro. </p>
-          <img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif">
-        </div>
-        <div class="full-image loading-icon">
-          <p>Presented by transition following the logo animation.</p>
-          <img src="https://media.giphy.com/media/1TSHD8DNYTh8RcsRa5/giphy.gif">
+          <p>Final logo animation for the intro with a sponsored scene. </p>
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/BEMO8/bed486f3d0.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="full-image loading-icon">
             <p>Sidebar and challenge progress graphics that highlight as the player completes a milestone. </p>
