--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -53,14 +53,9 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Behind the Cosplay</h2>
-        <p>Animated and designed video graphics for IGN's video series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
+        <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
         <br>
-        <p><a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Watch the series here</a></p>
-      </div>
-      <div class="art-display">
-        <div class="full-image loading-icon">
-          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/t/5af4971e758d467d5607467d/1535649242043/btc_1920px.png?format=750w">
-        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kCnd4X863xc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
       <hr>
     </div>
