--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       </a>
     </div>
     <div class="item">
-      <a href="vector.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
-        <span>Vector Art</span>
+      <a href="god-of-war.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/wofsoE6de9uiCO6ykV/giphy.gif" alt="god of war"></div>
+        <span>God of War - IGN Campaign</span>
       </a>
     </div>
     <div class="item">
