--- a/god-of-war.html
+++ b/god-of-war.html
@@ -84,11 +84,14 @@
         <div class="art-header">
           <h2>IGN Home Page Banners</h2>
           <p>Used existing assets to design each banner within a safe zone. Banner images looped as the viewer scrolled. Also edited together a 10 second auto video to play before the first banner. Backend build done by George Aguila.</p>
+          <br>
           <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=gow-blockbuster">View the live roadblocks + video here</a> (turn off any ad blockers)</p>
         </div>
         <div class="art-display">
           <div class="full-image loading-icon">
-            <img src="https://media.giphy.com/media/YdbwKXZNo4BA1B17oo/giphy.gif">
+            <video width="100%" autoplay muted loop>
+              <source src="https://puu.sh/BFhBV/fed38d8be6.mp4" type="video/mp4">
+              </video>
           </div>
           <div class="full-image loading-icon">
             <img src="https://78.media.tumblr.com/071647648e39c6d25c206ce418dca00e/tumblr_pcjls4WIzE1tmp8rdo5_r2_1280.png">
