--- a/anime-omake.html
+++ b/anime-omake.html
@@ -109,7 +109,9 @@
           
           <div class="full-image loading-icon">
             <p>Transition animation for the video editors to use between scene changes. </p>
-            <img src="https://puu.sh/BsZjC/6ba2a17dc1.gif">
+            <video width="100%" autoplay muted loop>
+                <source src="https://puu.sh/BFQ9d/ecb64e43b0.mp4" type="video/mp4">
+              </video>
           </div>
           <div class="full-image loading-icon">
             <p>Animated snipe advertising the show's sponsor. </p>
