--- a/anime-omake.html
+++ b/anime-omake.html
@@ -115,11 +115,15 @@
           </div>
           <div class="full-image loading-icon">
             <p>Animated snipe advertising the show's sponsor. </p>
-            <img src="https://puu.sh/BsZwd/bc39dbdb93.gif">
+            <video width="100%" autoplay muted loop>
+              <source src="https://puu.sh/BJZnO.mp4" type="video/mp4">
+            </video>
           </div>
           <div class="full-image loading-icon">
             <p>Animated lower thirds templatized for easy use and text editing for the Video Team. </p>
-            <img src="https://puu.sh/BtStX/8260806db5.gif">
+            <video width="100%" autoplay muted loop>
+              <source src="https://puu.sh/BJZo5.mp4" type="video/mp4">
+            </video>
           </div>
 
            <!-- Web graphics -->
