--- a/antman.html
+++ b/antman.html
@@ -52,60 +52,53 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>God of War</h2>
-        <p>Ads and animation done for Sony's God of War campaign that ran on IGN's website and IGN's Daily Fix series. 3D axe intro animation done by Jack Taylor.</p>
+        <h2>Ant-Man and the Wasp</h2>
+        <p>I was tasked with creating HUD cams based on Ant-Man and Wasp's POV for Disney's sponsorship of IGN's E3 2018 coverage. Inspiration was drawn from their costumes and the movie's ad branding. </p>
       </div>
+      <p>Ant-Man HUD in action:</p>
       <div class="art-display">
         <div class="full-image loading-icon">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/8hekr7DcTSg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=2920" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="full-image loading-icon">
+            <p>Wasp HUD in action:</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=5225" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
       <hr>
     </div>
-    <!-- Section 2 -->
+        
+      <!-- Logo -->
+
     <div class="art-section">
-      <div class="art-header">
-        <h2>Daily Fix</h2>
-        <p>Designed the background monitors and animated the custom segment transition scenes for the sponsored Daily Fix video.</p>
-      </div>
       <div class="art-display">
-        <div class="full-image loading-icon">
-          <img src="https://78.media.tumblr.com/d744cb2b63391f32949985179af90d2b/tumblr_pcjls4WIzE1tmp8rdo7_r1_1280.png">
+        <div class="full-image">
+          <p>Static drafts of the cams.  Not the final one used by the video team, but one of the explorations. </p>
+          <img src="https://78.media.tumblr.com/b1a905c978e166fae67cdb045e6918ea/tumblr_pcjls4WIzE1tmp8rdo1_1280.png">
         </div>
         <div class="full-image loading-icon">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/BK09V/81b32926e5.mp4" type="video/mp4">
-            </video>
+          <img src="https://78.media.tumblr.com/7ecc5927975bef7076fc549582059b65/tumblr_pcjls4WIzE1tmp8rdo2_1280.png">
         </div>
+        </div>
+        <!--Animated versions-->
+        <div class="full-image loading-icon">
+          <p>Animated version over footage. </p>
+          <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
+        </div>
+        <div class="full-image loading-icon">
+            <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
+          </div>
+          <!--Snipe-->
+          <div class="full-image loading-icon">
+            <p>Animated the branded snipes that appear for a few seconds on the cams </p>
+            <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
+          </div>
+          <div class="full-image loading-icon">
+              <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
+            </div>
       </div>
       <hr>
     </div>
-    <!-- Section 3 -->
-    <div class="art-section">
-        <div class="art-header">
-          <h2>IGN Home Page Banners</h2>
-          <p>Used existing assets to design each banner within a safe zone. Banner images looped as the viewer scrolled. Also edited together a 10 second auto video to play before the first banner. Backend build done by George Aguila.</p>
-          <br>
-          <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=gow-blockbuster">View the live roadblocks + video here</a> (turn off any ad blockers)</p>
-        </div>
-        <div class="art-display">
-          <div class="full-image loading-icon">
-            <video width="100%" autoplay muted loop>
-              <source src="https://puu.sh/BFhBV/fed38d8be6.mp4" type="video/mp4">
-              </video>
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/071647648e39c6d25c206ce418dca00e/tumblr_pcjls4WIzE1tmp8rdo5_r2_1280.png">
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/e4628980115f6eecd90f12e343b69a4b/tumblr_pcjls4WIzE1tmp8rdo3_r2_1280.png">
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/aa8ccd374ffd9603447da2a227cd8d24/tumblr_pcjls4WIzE1tmp8rdo4_r2_1280.png">
-          </div>
-        </div>
-        <hr>
-      </div>
   </div>
 
 </body>
