--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       </a>
     </div>
     <div class="item">
-      <a href="btc.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1lCGm5ucLhyNqLOrz6/giphy.gif" alt="behind the cosplay IGN video series"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
+      <a href="antman.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/18QvVfzPIbzCedqAIG/giphy.gif" alt="behind the cosplay IGN video series"></div>
+        <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
       </a>
     </div>
 
