--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <span>YouTube Gaming Commissions</span>
       </a>
     </div>
+
     <!-- Row 2 -->
     <div class="item">
       <a href="anime-omake.html">
@@ -87,6 +88,7 @@
         <span>Behind the Cosplay - IGN Video Series</span>
       </a>
     </div>
+
      <!-- Row 3 -->
      <div class="item">
       <a href="manga.html">
@@ -102,10 +104,30 @@
     </div>
     <div class="item">
       <a href="antman.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/18QvVfzPIbzCedqAIG/giphy.gif" alt="behind the cosplay IGN video series"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/5BYm9rzxIgI1T9OIsP/giphy.gif" alt="antman and the wasp hud"></div>
         <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
       </a>
     </div>
+
+    <!-- Row 4 -->
+    <div class="item">
+        <a href="presale.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/9VlW6wtuQQUVQstIL3/giphy.gif" alt="motion manga"></div>
+          <span>IGN Pre-Sale Mocks</span>
+        </a>
+      </div>
+      <div class="item">
+        <a href="e3-booth.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/vwGbijyKqWKiTrb7aH/giphy.gif" alt="e3 booth monitors"></div>
+          <span>God of War - IGN Campaign</span>
+        </a>
+      </div>
+      <div class="item">
+        <a href="dailyui.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/26xBQjDNokviSKGg8/giphy.gif" alt="behind the cosplay IGN video series"></div>
+          <span>DailyUI [Web & Mobile UI]</span>
+        </a>
+      </div>
 
   </div>
 
