--- a/presale.html
+++ b/presale.html
@@ -71,7 +71,27 @@
         </div>
         <div class="full-image loading-icon">
             <img src="https://66.media.tumblr.com/095bf65740135f04848b072521b2c736/tumblr_pentg9IwJr1tmp8rdo8_r1_1280.png">
-        </div>
+        </div></div></div>
+
+        <div class="art-section">
+                <div class="art-display">
+        <div class="full-image">
+                <p><h2>Jump Force</h2> Pitched to Bandai Namco (June 2018). </p>
+                <p>1900 x 500 Banner</p>
+                <img src="https://78.media.tumblr.com/72cb9a5343bcf2c0f39ecd30578d5828/tumblr_pc4yd2YnWx1tmp8rdo1_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                  <p>1900 x 500 Banner</p>
+                <img src="https://78.media.tumblr.com/0f7c0474ed09917f081f84e48eb7a758/tumblr_pc4yd2YnWx1tmp8rdo2_r1_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                  <p>Video Content Block</p>
+                  <img src="https://78.media.tumblr.com/deefa77a5c58029eff2bd31fe35cacdc/tumblr_pc4yd2YnWx1tmp8rdo3_r1_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                    <p>Object Page</p>
+                    <img src="https://78.media.tumblr.com/4303d2e4e15eda3dd9b17fa8a3594fe4/tumblr_pc4yd2YnWx1tmp8rdo5_r1_1280.png">
+                </div>
       </div>
       <hr>
     </div>
