--- a/presale.html
+++ b/presale.html
@@ -77,20 +77,20 @@
                 <div class="art-display">
         <div class="full-image">
                 <p><h2>Jump Force</h2> Pitched to Bandai Namco (June 2018). </p>
-                <p>1900 x 500 Banner</p>
-                <img src="https://78.media.tumblr.com/72cb9a5343bcf2c0f39ecd30578d5828/tumblr_pc4yd2YnWx1tmp8rdo1_1280.png">
+                <p>1900 x 500 banner + IGN Doodle (top left image)</p>
+                <img src="https://66.media.tumblr.com/b1904ccf20913948619bb5ec883d7ea2/tumblr_pex4rlQRen1tmp8rdo4_r1_1280.png">
               </div>
               <div class="full-image loading-icon">
-                  <p>1900 x 500 Banner</p>
-                <img src="https://78.media.tumblr.com/0f7c0474ed09917f081f84e48eb7a758/tumblr_pc4yd2YnWx1tmp8rdo2_r1_1280.png">
+                  <p>970 x 250</p>
+                <img src="https://66.media.tumblr.com/76f85ce0ac910860aafc356463ba97c5/tumblr_pex4rlQRen1tmp8rdo3_r1_1280.png">
               </div>
               <div class="full-image loading-icon">
                   <p>Video Content Block</p>
-                  <img src="https://78.media.tumblr.com/deefa77a5c58029eff2bd31fe35cacdc/tumblr_pc4yd2YnWx1tmp8rdo3_r1_1280.png">
+                  <img src="https://66.media.tumblr.com/0b8d92ae7734d609734c7bc933683a30/tumblr_pex4rlQRen1tmp8rdo6_r4_1280.png">
               </div>
               <div class="full-image loading-icon">
                     <p>Object Page</p>
-                    <img src="https://78.media.tumblr.com/4303d2e4e15eda3dd9b17fa8a3594fe4/tumblr_pc4yd2YnWx1tmp8rdo5_r1_1280.png">
+                    <img src="https://66.media.tumblr.com/3857276ea7e4b1a24977ee8a12ce82f4/tumblr_pex4rlQRen1tmp8rdo5_r1_1280.png">
                 </div>
       </div>
       <hr>
