--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <!-- Row 4 -->
       <div class="item">
         <a href="e3-booth.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/vwGbijyKqWKiTrb7aH/giphy.gif" alt="e3 booth monitors"></div>
-          <span>God of War - IGN Campaign</span>
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
+          <span>Booth Monitors - IGN Live at E3</span>
         </a>
       </div>
       <div class="item">
