--- a/manga.html
+++ b/manga.html
@@ -53,7 +53,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Motion Manga and Art</h2>
-        <p>For fun! Static manga panels and art animated using Photoshop and After Effects.</p> <p>Same techniques work for artwork and photographs. </p>
+        <p>For fun! From 2014 to 2016 on Tumblr, I animated static manga panels and art using Photoshop and After Effects.</p> <p>Same techniques work for artwork and photographs. </p>
       </div>
       <div class="art-display">
         <div class="half-image">
@@ -63,6 +63,84 @@
           <img src="https://media.giphy.com/media/26xBzOpqWotU9zSH6/source.gif">
         </div>
       </div>
+
+      <!--Juuzou-->
+    <div class="art-display">
+            <div class="half-image">
+              <img src="https://puu.sh/tY3FR/594caa0267.png">
+              <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
+            </div>
+          </div>
+
+      <!--Haise Jump-->
+      <div class="art-display">
+            <div class="half-image">
+              <img src="https://puu.sh/tY3ly/dbfb233c93.png">
+              <img src="https://media.giphy.com/media/26xBGqnWsLHFRYLrG/giphy.gif">
+            </div>
+          </div>
+
+      <!--Owari-->
+    <div class="art-display">
+        <div class="half-image">
+            <img src="https://puu.sh/uBd0H/3b786a7ba3.png">
+            <img src="https://media.giphy.com/media/xUPGcAYFrg2DprS3m0/source.gif">
+        </div>
+    </div>
+
+    <div class="art-display">
+        <div class="half-image">
+            <img src="https://puu.sh/tY4pW/944d59833e.png">
+            <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
+        </div>
+    </div>
+
+    <div class="art-display">
+            <div class="half-image">
+                <img src="https://puu.sh/uOxwD/c7e1a1c682.png">
+                <img src="https://media.giphy.com/media/3o7btYkQNdWEOfDLwc/source.gif">
+            </div>
+        </div>
+
+    <!--Arima and Kaneki-->
+    <div class="art-display">
+            <div class="half-image">
+                <img src="https://puu.sh/tY4Sg/e1731d08ff.png">
+                <img src="https://media.giphy.com/media/l0ExdVlwMVAxOF8Yw/source.gif">
+            </div>
+    </div>
+    
+        <div class="art-display">
+                <div class="half-image">
+                        <p>Some non-manga motion artwork.</p>
+                    <img src="https://puu.sh/unxhy/36e50a7f92.png">
+                    <img src="https://media.giphy.com/media/xTiN0M792TkqpmkDlK/source.gif">
+                </div>
+            </div>
+
+        <div class="art-display">
+                <div class="half-image">
+                    <img src="https://puu.sh/uUAV3/a540dee67a.png">
+                    <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
+                </div>
+        </div>
+
+        <div class="art-display">
+            <div class="half-image">
+                <img src="https://puu.sh/uUKur/5aa2166a58.png">
+                <img src="https://media.giphy.com/media/3o7bu0Qj4MVGlinv7a/giphy.gif">
+            </div>
+        </div>
+
+        <div class="art-display">
+                <div class="half-image">
+                    <img src="https://puu.sh/uUDb6/b4672475a3.png">
+                    <img src="https://media.giphy.com/media/xUPGcnxUpC6wCHNxxm/giphy.gif">
+                </div>
+            </div>
+
+
+
       <hr>
     </div>
  
