--- a/e3-booth.html
+++ b/e3-booth.html
@@ -71,7 +71,30 @@
         <div class="quarter-image loading-icon">
             <img src="https://78.media.tumblr.com/68565cb798a26d2a61b23b28d310c83f/tumblr_orm64lSyUY1vihf3to3_400.gif">
       </div>
+      <div class="half-image loading-icon">
+            <img src="https://78.media.tumblr.com/c629ea0f4910516eeda212eb31584fe1/tumblr_pcrrgnPlD51tmp8rdo2_r2_1280.png">
+      </div>
+    </div>
 
+
+      <div class="art-header">
+            <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention. Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched. </p>
+            <br>
+            <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/top10/">View the full Top 10 animation here.</a></p>
+          </div>
+          <div class="art-display">
+        <div class="full-image loading-icon">
+          <img src="https://lh6.googleusercontent.com/_gPnD8tovgnwjJ17MnwXuTpE4z_f0YMXGoIM8WtRsHnSsr6EnMO2OSGnmPS_zAvrtguQIm1i9ZTRp18=w2564-h1392-rw">
+        </div>
+        <div class="full-image loading-icon">
+                <img src="https://78.media.tumblr.com/23742910516578772e6b421ac38f3f69/tumblr_pcrrgnPlD51tmp8rdo3_r2_1280.png">
+        </div>
+        <div class="half-image loading-icon">
+                <img src="https://78.media.tumblr.com/88822adf8a55740baeb0e0b25ed4d08a/tumblr_pcrrgnPlD51tmp8rdo6_r1_400.png">
+          </div>
+          <div class="half-image loading-icon">
+                <img src="https://78.media.tumblr.com/91c7324b015b0f5d7c1a406cc83841b8/tumblr_pcrrgnPlD51tmp8rdo5_r2_400.png">
+          </div>
       </div>
       <hr>
     </div>
