--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <!-- Row 4 -->
       <div class="item">
-        <a href="e3-booth.html">
+        <a href="e3.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
           <span>Booth Monitors - IGN Live at E3</span>
         </a>
@@ -124,7 +124,7 @@
         </div>
       <div class="item">
         <a href="dailyui.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/26xBQjDNokviSKGg8/giphy.gif" alt="behind the cosplay IGN video series"></div>
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3JNGTvPcbHtMHKu6MH/giphy.gif" alt="behind the cosplay IGN video series"></div>
           <span>DailyUI [Web & Mobile UI]</span>
         </a>
       </div>
