--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <!-- Row 4 -->
       <div class="item">
-        <a href="e3.html">
+        <a href="e3-booth.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
           <span>Booth Monitors - IGN Live at E3</span>
         </a>
