--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
         <img src="img/about.png">
       </div>
       <div>
-          <h2>Hello!</h2>
-          <p>I'm a designer based in San Francisco with a love for art, animation, video games, and anime. I have experience in motion design, graphic design, advertisement, branding, and post-production with room to grow into new areas.</p>
+          <h2>Hello, I'm Kathleen!</h2>
+          <p>I'm a multidisciplinary designer based in San Francisco with a love for art, animation, video games, and anime. I have experience in motion design, graphic design, advertisement, branding, and post-production with room to grow into new areas.</p>
           <p>Outside of my job, I do remote work for clients ranging from YouTube gaming intros/outros, video thumbnails, print and web design, Twitch graphics, educational PSAs, logos, and animated art and videos. If it's in my skill range, I'll take it on!</p>
           <p>In my free time, you can find me on <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble</a> and <a class="active-link" target="_blank" href="https://kaeveeoh-art.tumblr.com/">Tumblr</a> dabbling in vector art and animation.</p>
       </div>
