--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -72,11 +72,11 @@
         </div>
         <div class="full-image loading-icon">
           <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
-          <img src="https://media.giphy.com/media/xl26PC4pontPsA74Bj/giphy.gif">
+          <img src="https://puu.sh/C2i7p/470b611369.gif">
         </div>
         <div class="full-image loading-icon">
           <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
-          <img src="https://media.giphy.com/media/2A445aTbLe36Ro7iLF/giphy.gif">
+          <img src="https://puu.sh/C2ihE/ef74b949d4.gif">
         </div>
       </div>
       <hr>
