--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -41,7 +41,7 @@
       </div>
       <div id="menu-links">
         <span><a href="index.html">Portfolio</a></span>
-        <span><a target="_blank" href="https://puu.sh/Btl8B/182ae937c6.pdf">Resume</a></span>
+        <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
       </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="full-image loading-icon">
           <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
-          <img src="https://puu.sh/C2i7p/470b611369.gif">
+          <img src="https://puu.sh/C8eqb.gif">
         </div>
         <div class="full-image loading-icon">
           <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
