--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div id="menu-links">
         <span><a class="active-link" href="index.html">Portfolio</a></span>
-        <span><a target="_blank" href="https://puu.sh/Btl8B/182ae937c6.pdf">Resume</a></span>
+        <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
       </div>
