--- a/anime-omake.html
+++ b/anime-omake.html
@@ -52,8 +52,13 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>Anime Omake</h2>
+          <h2>Anime Omake</h2>
+          <div class="art-display">
+          <div class="full-image loading-icon">
+            <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg">
+            </div>
         <p>Designed and animated all graphics related to the IGN miniseries "Anime Omake," a series focused on discussing and recommending the latest and greatest anime. </p>
+      </div>
       </div>
       <div class="art-display">
         <div class="full-image loading-icon">
