--- a/e3-booth.html
+++ b/e3-booth.html
@@ -84,7 +84,7 @@
           </div>
           <div class="art-display">
         <div class="full-image loading-icon">
-          <img src="https://lh6.googleusercontent.com/_gPnD8tovgnwjJ17MnwXuTpE4z_f0YMXGoIM8WtRsHnSsr6EnMO2OSGnmPS_zAvrtguQIm1i9ZTRp18=w2564-h1392-rw">
+          <img src="https://66.media.tumblr.com/d251d5457ab58443df4ab85747635d69/tumblr_orm60nb6Oh1vihf3to8_r1_1280.jpg">
         </div>
         <div class="full-image loading-icon">
                 <img src="https://78.media.tumblr.com/23742910516578772e6b421ac38f3f69/tumblr_pcrrgnPlD51tmp8rdo3_r2_1280.png">
@@ -96,6 +96,36 @@
                 <img src="https://78.media.tumblr.com/91c7324b015b0f5d7c1a406cc83841b8/tumblr_pcrrgnPlD51tmp8rdo5_r2_400.png">
           </div>
       </div>
+
+      <div class="art-header">
+          <p>In 2018, I got to revisit the animated lists and update it to match IGN's booth design for E3 2018.  A golden frame was given to each list to mimic the showcase theme found throughout the booth.  Booth design done by lunarsaloon. </p><br>
+
+        <!--IGN Stats-->
+        <div class="art-display">
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/1ecb18dca214976a5fa6b4258ed42152/tumblr_pitsk0uLcD1tmp8rdo1_400.png">
+        </div>
+        <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/80679e623deaa6bc24692e6d392355d8/tumblr_pitsk0uLcD1tmp8rdo2_400.png">
+          </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/00a76962ac4e4a5f8da48fce0d149069/tumblr_pitsk0uLcD1tmp8rdo3_400.png">
+        </div>
+        <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/bae94f58f9c712b80fbb2fc8eb969ceb/tumblr_pitsk0uLcD1tmp8rdo4_400.png">
+      </div>
+      
+      <div class="full-image loading-icon">
+              <img src="https://66.media.tumblr.com/c262eedc413d7bd198a666099834b451/tumblr_pan7luYnPV1vihf3to2_1280.jpg">
+      </div>
+      <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/f0d55b57ce246166d4406f7d7499a18f/tumblr_pan7luYnPV1vihf3to3_1280.jpg">
+    </div>
+      <div class="half-image loading-icon">
+              <img src="https://66.media.tumblr.com/686fe335a7b078b4828dc1491887cb63/tumblr_pan7luYnPV1vihf3to4_1280.jpg">
+        </div>
+    </div>
+
       <hr>
     </div>
   </div>
