--- a/e3-booth.html
+++ b/e3-booth.html
@@ -78,7 +78,7 @@
 
 
       <div class="art-header">
-            <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention. Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched. </p>
+            <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention. Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched. Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a></p>
             <br>
             <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/top10/">View the full Top 10 animation here.</a></p>
           </div>
@@ -98,7 +98,7 @@
       </div>
 
       <div class="art-header">
-          <p>In 2018, I got to revisit the animated lists and update it to match IGN's booth design for E3 2018.  A golden frame was given to each list to mimic the showcase theme found throughout the booth.  Booth design done by lunarsaloon. </p><br>
+          <p>In 2018, I got to revisit the animated lists and update it to match IGN's booth design for E3 2018.  A golden frame was given to each list to mimic the showcase theme found throughout the booth. Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a>. </p><br>
 
         <!--IGN Stats-->
         <div class="art-display">
