--- a/antman.html
+++ b/antman.html
@@ -53,16 +53,18 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Ant-Man and the Wasp</h2>
+        <div class="art-display">
+        <div class="full-image loading-icon">
+            <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5b64b1680e2e725edeb632bc/1537982411756/AntmanWasp_thumb.png?format=2500w">
         <p>I was tasked with creating HUD cams based on Ant-Man and Wasp's POV for Disney's sponsorship of IGN's E3 2018 coverage. Inspiration was drawn from their costumes and the movie's ad branding. </p>
       </div>
       <p>Ant-Man HUD in action:</p>
-      <div class="art-display">
         <div class="full-image loading-icon">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=2920" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="full-image loading-icon">
             <p>Wasp HUD in action:</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=5225" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=5225" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>   </div></div>
         </div>
       </div>
       <hr>
