--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!-- Row 1 -->
     <div class="item">
       <a href="https://vimeo.com/211151781">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
-        <span>Animation Demo Reel</span>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/236EHUuRd5Y3WAJ1A7/giphy.gif" alt="animation demo reel"></div>
+        <span>Animation Demo Reel (2017)</span>
       </a>
     </div>
     <div class="item">
